# VkStudy

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ConnorNotes.txt  LICENSE  Notes.txt  README.md  TODO.txt
shaders/: blue.frag  colored_triangle.frag  default_lit.frag  fragment_shader_test.frag  green.frag  hard_coded_fullscreen_quad.vert  hard_coded_triangle_pos.vert  hard_coded_triangle_pos_out_col.vert  hex_beat_background.frag  in_color.frag  menger_prison_background.frag  mesh_triangle.vert  pn.vert  pn_normal_out_0.vert  pnc.vert  pnc_color_out_0.vert  pnc_normal_out_0.vert  pnc_normal_out_color_0.vert  pnct_color_out_0_tex_out_1.vert  pnct_tex_out_0.vert  position.vert  position_defaultCol.vert  textured_lit.frag
src/: CMakeLists.txt  baked_assets.h  camera.cpp  camera.h  cstring_ring_buffer.h  imgui_util.cpp  material.cpp  materials.cpp  materials.h  noop_math.h  types.h  util.cpp  util.h  vk_engine.cpp  vk_engine.h  vk_imgui.cpp  vk_imgui.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline_builder.cpp  vk_pipeline_builder.h  vk_study.cpp  vk_study.h  vk_textures.cpp  vk_textures.h  vk_types.h  vk_util.cpp  vk_util.h  window_manager.h  windows_util.cpp
src/asset-baker/: CMakeLists.txt  asset_main.cpp
src/asset_baker/: CMakeLists.txt  asset_main.cpp
src/assetlib/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  material_asset.cpp  material_asset.h  mesh_asset.cpp  mesh_asset.h  prefab_asset.cpp  prefab_asset.h  texture_asset.cpp  texture_asset.h
src/noop_math/: CMakeLists.txt  noop_math.cpp  noop_math.h
src/testing_ground/: testing_ground.cpp  testing_util.h
src/tests/: CMakeLists.txt  noop_math_test.cpp  playground_test.cpp  shader_reflect_test.cpp  test.h
